force-app/main/default/objects/Torc_Assessment__c/Torc_Assessment__c.object-meta.xml
<CustomObject>
    <label>Torc Assessment</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Torc Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>