force-app/main/default/objects/Torc_Assessment__c/fields/assessmentDate__c.field-meta.xml
<CustomField>
    <fullName>assessmentDate__c</fullName>
    <label>Assessment Date</label>
    <type>DateTime</type>
</CustomField>