force-app/main/default/objects/Torc_Assessment__c/fields/codeScore__c.field-meta.xml
<CustomField>
    <fullName>codeScore__c</fullName>
    <inlineHelpText>Score obtained by the Candidate in coding</inlineHelpText>
    <label>Code Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>