force-app/main/default/objects/Torc_Assessment__c/fields/finalScore__c.field-meta.xml
<CustomField>
    <fullName>finalScore__c</fullName>
    <inlineHelpText>Final Score (computing Code and MCQ score)</inlineHelpText>
    <label>Final Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>