force-app/main/default/objects/Torc_Assessment__c/fields/multipleChoiceScore__c.field-meta.xml
<CustomField>
    <fullName>multipleChoiceScore__c</fullName>
    <inlineHelpText>Candidate score in multiple choice section</inlineHelpText>
    <label>Multiple Choice Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>