force-app/main/default/objects/Torc_Assessment__c/fields/plagiarism__c.field-meta.xml
<CustomField>
    <fullName>plagiarism__c</fullName>
    <inlineHelpText>If the assessment engine detected cheating or copy pasting of code.</inlineHelpText>
    <label>Plagiarism</label>
    <length>80</length>
    <type>Text</type>
</CustomField>