force-app/main/default/objects/Torc_Assessment__c/fields/reportLink__c.field-meta.xml
<CustomField>
    <fullName>reportLink__c</fullName>
    <inlineHelpText>Customer accessible report link showing candidate performance.</inlineHelpText>
    <label>Report Link</label>
    <type>Url</type>
</CustomField>