force-app/main/default/objects/Torc_Assessment__c/fields/source__c.field-meta.xml
<CustomField>
    <fullName>source__c</fullName>
    <description>Test Sourced from eg Glider, CoderByte, Personal Interview etc.</description>
    <inlineHelpText>Test Sourced from eg Glider, CoderByte, Personal Interview etc.</inlineHelpText>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>