force-app/main/default/objects/Torc_Assessment__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <inlineHelpText>Test Status usually completed or time expired.</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>