force-app/main/default/objects/Torc_Assessment__c/fields/testId__c.field-meta.xml
<CustomField>
    <fullName>testId__c</fullName>
    <inlineHelpText>Internal Test Id, used by the assessment provider.</inlineHelpText>
    <label>Test Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>