force-app/main/default/objects/Torc_Assessment__c/fields/testName__c.field-meta.xml
<CustomField>
    <fullName>testName__c</fullName>
    <inlineHelpText>Descriptive Test Name</inlineHelpText>
    <label>Test Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>