force-app/main/default/objects/Torc_Assessment__c/fields/timeTaken__c.field-meta.xml
<CustomField>
    <fullName>timeTaken__c</fullName>
    <inlineHelpText>Time taken by the candidate for the test (in minutes)</inlineHelpText>
    <label>Time Taken</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>