force-app/main/default/objects/Torc_Assessment__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Assessments</relationshipLabel>
    <relationshipName>Torc_Assessments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>