force-app/main/default/objects/Torc_Assessment__c/fields/updatedAt__c.field-meta.xml
<CustomField>
    <fullName>updatedAt__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>